<resources>
    <string name="app_name">Study Organizer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="edit_year_term">Edit</string>

    <!--&lt;!&ndash; TODO: Remove or change this placeholder text &ndash;&gt;-->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="currentScrollValue">7.5</string>
    <string name="DefaultScrollValue">7</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_academic_year">Add New Academic Year</string>
    <string name="class_name">Class Name</string>
    <string name="module">Module</string>
    <string name="place">Place</string>
    <string name="instructor">Instructor</string>
    <string name="select_academic_year_term">Select: Academic Year/Term</string>
    <string name="new_time">Add New Time</string>
    <string name="DefaultDuration">90</string>
    <string name="DefaultStartTime_hour">8</string>
    <string name="DefaultStartTime_min">0</string>
    <string name="SharedPreferencesName">DefaultValues</string>
    <string name="DefaultDateDuration">90</string>
    <string name="DefaultYearDuration">270</string>
</resources>
