<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewOrEditActivities.ClassDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/ClassDetailsTB"
        android:layout_alignParentEnd="false">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Class Name"
        android:id="@+id/class_name_TV"
        android:layout_below="@+id/ClassDetailsTB"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingLeft="30dp"
        android:paddingBottom="20dp"
        android:textColor="#ffffff" />

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context="com.example.atefhares.study_organizer.NewOrEditActivities.AddOrEditClassActivity"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/ClassNameTV"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/class_name"
                    android:inputType="text|time"
                    android:maxLength="30"
                    android:textSize="20sp"
                    android:background="#00000000"
                    android:textColor="#433f3f"
                    android:editable="false"
                    android:enabled="true"
                    android:contextClickable="false"
                    android:longClickable="false" />
                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="@color/LayoutDivider" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/ClassModuleTV"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/module"
                    android:inputType="text"
                    android:maxLength="30"
                    android:textSize="20sp"
                    android:background="#00000000"
                    android:textColor="#433f3f"
                    android:longClickable="false" />
                <View
                    android:layout_height="match_parent"
                    android:layout_width="1dp"
                    android:background="@color/LayoutDivider" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LayoutDivider" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/place" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/ClassPlaceTV"
                    android:hint="@string/place"
                    android:inputType="text|time"
                    android:maxLength="15"
                    android:textSize="20sp"
                    android:background="#00000000"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textColor="#433f3f"
                    android:longClickable="false"
                    android:paddingRight="20dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LayoutDivider" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:id="@+id/InstructorTV"
                    android:hint="@string/instructor"
                    android:inputType="text|time"
                    android:maxLength="15"
                    android:textSize="20sp"
                    android:background="#00000000"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:textColor="#433f3f"
                    android:longClickable="false"
                    android:paddingRight="20dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LayoutDivider" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/yearicon"
                    android:layout_marginBottom="100dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Academic Year / Term"
                        android:id="@+id/textView27"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="fill_parent"
                        android:layout_height="5dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Year:"
                                android:id="@+id/textView25"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:paddingLeft="10dp"
                                android:paddingRight="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/YearNameTV"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:gravity="center" />

                        </LinearLayout>

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="5dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/YearDateTV"
                            android:paddingLeft="10dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <Space
                        android:layout_width="fill_parent"
                        android:layout_height="5dp"
                        android:layout_weight="1" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/LayoutDivider" />
                    <Space
                        android:layout_width="fill_parent"
                        android:layout_height="5dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Term:"
                                android:id="@+id/textView26"
                                android:layout_gravity="center"
                                android:paddingLeft="10dp"
                                android:textAlignment="center"
                                android:gravity="left|center"
                                android:paddingRight="5dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/TermNameTV"
                                android:layout_gravity="center"
                                android:textAlignment="center"
                                android:gravity="left|center"
                                android:layout_weight="0.07" />

                        </LinearLayout>

                        <Space
                            android:layout_width="fill_parent"
                            android:layout_height="5dp"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/TermDateTV"
                            android:paddingLeft="10dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/LayoutDivider" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView4"
                    android:src="@drawable/clock"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/ClassTimesVL"
                    android:animateLayoutChanges="true"
                    android:paddingRight="20dp"
                    android:layout_gravity="center_vertical">

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_height="1dp"
                android:layout_width="fill_parent"
                android:background="@color/LayoutDivider"
                android:id="@+id/lastDivider1"
                android:visibility="invisible" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:id="@+id/lastSpace2"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:orientation="horizontal"
                android:id="@+id/ExamsMainVL"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:id="@+id/imageView7"
                    android:src="@drawable/exams"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:id="@+id/ExamsVL"
                    android:animateLayoutChanges="true"
                    android:paddingRight="20dp" />
            </LinearLayout>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
